--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Leedom",
+  "name": "Leedom's docs",
   "version": "1.0.0",
   "description": "Leedom's docs",
   "repository": "https://github.com/leedom92/docs",
