--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "Leedom's docs",
   "version": "1.0.0",
+  "type": "module",
   "description": "Leedom's docs",
   "repository": "https://github.com/leedom92/docs",
   "author": "Leedom",
@@ -16,7 +17,8 @@
     "markdown-it-container": "^3.0.0",
     "unocss": "^0.50.6",
     "unplugin-vue-define-options": "^1.3.2",
-    "vitepress": "1.0.0-alpha.62",
+    "vite": "^6.1.1",
+    "vitepress": "^1.6.3",
     "vue": "^3.2.47"
   },
   "dependencies": {
