--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "Leedom's docs",
   "version": "1.0.0",
-  "type": "module",
   "description": "Leedom's docs",
   "repository": "https://github.com/leedom92/docs",
   "author": "Leedom",
@@ -13,15 +12,6 @@
     "deploy": "sh deploy.sh"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue-jsx": "^4.1.1",
-    "markdown-it-container": "^4.0.0",
-    "unocss": "^66.0.0",
-    "unplugin-vue-define-options": "^1.5.5",
-    "vite": "^6.1.1",
-    "vitepress": "^1.6.3",
-    "vue": "^3.5.13"
-  },
-  "dependencies": {
-    "@vue/theme": "^2.3.0"
+    "vitepress": "^1.6.3"
   }
 }
